# app-netapp-storage

./: .gitreview  .zuul.yaml  README.md  debian_iso_image.inc  debian_pkg_dirs
helm-charts/custom/netapp-trident-provisioner-helm/netapp-trident-provisioner-helm/: Makefile
python3-k8sapp-netapp-storage/debian/all/: meta_data.yaml
python3-k8sapp-netapp-storage/debian/all/deb_folder/: changelog  control  copyright  rules
python3-k8sapp-netapp-storage/k8sapp_netapp_storage/: .stestr.conf  setup.cfg  setup.py  test-requirements.txt  tox.ini
python3-k8sapp-netapp-storage/k8sapp_netapp_storage/k8sapp_netapp_storage/common/: constants.py
python3-k8sapp-netapp-storage/k8sapp_netapp_storage/k8sapp_netapp_storage/helm/: netapp.py  netapp_provisioner.py
python3-k8sapp-netapp-storage/k8sapp_netapp_storage/k8sapp_netapp_storage/lifecycle/: lifecycle_netapp.py
python3-k8sapp-netapp-storage/k8sapp_netapp_storage/k8sapp_netapp_storage/tests/: test_plugins.py
stx-netapp-storage-helm/debian/all/: meta_data.yaml
stx-netapp-storage-helm/debian/all/deb_folder/: changelog  control  copyright  rules
stx-netapp-storage-helm/stx-netapp-storage-helm/files/: metadata.yaml
stx-netapp-storage-helm/stx-netapp-storage-helm/fluxcd-manifests/: kustomization.yaml
stx-netapp-storage-helm/stx-netapp-storage-helm/fluxcd-manifests/base/: helmrepository.yaml  kustomization.yaml  namespace.yaml
stx-netapp-storage-helm/stx-netapp-storage-helm/fluxcd-manifests/netapp-trident-provisioner/: helmrelease.yaml  kustomization.yaml  netapp-trident-provisioner-static-overrides.yaml  (+1 more)
(+20 files in other folders)
