[metadata]
name = k8sapp-netapp-storage
summary = StarlingX sysinv extensions for netapp-storage
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    k8sapp_netapp_storage

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    netapp-storage = systemconfig.helm_plugins.netapp_storage

systemconfig.helm_plugins.netapp_storage =
    001_netapp-trident = k8sapp_netapp_storage.helm.netapp:NetappHelm
    002_netapp-trident-provisioner = k8sapp_netapp_storage.helm.netapp_provisioner:NetappProvisionerHelm

systemconfig.app_lifecycle =
    netapp-storage = k8sapp_netapp_storage.lifecycle.lifecycle_netapp:NetappAppLifecycleOperator

[bdist_wheel]
universal = 1
